--- a/ucmc-dev.properties
+++ b/ucmc-dev.properties
@@ -1,3 +1,3 @@
 devName=dev
-crondConfig=0 0 0 0 ?vc dsfasdfdsafsddsfasdas111111111ssssssssssss
+crondConfig=0 0 0 0 ? aaaaaaaaaaaaaaaaaaaaaaaaaaa
 jdbcUrl=136aaaaaaaaaaaa
